K8POC-servicea/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicea-deployment
  labels:
    app: servicea
    refresh: ossi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: servicea
      refresh: ossi
  template:
    metadata:
      labels:
        app: servicea
        refresh: ossi
    spec:
      containers:
      - name: servicea
        image: servica:0.0.9-SNAPSHOT
        ports:
        - containerPort: 8010
